# musicdl

./: .copier-answers.yml  .pdm-python  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: publish-to-pypi.yml
docs/: conf.py  index.rst
src/musicdl/: download_youtube.py
tests/features/: Download_YouTube_Video.feature  Find_Popular_Videos_By_Artist_on_YouTube.feature
tests/functional/: test_Find_Popular_Videos_By_Artist_on_YouTube.py
tests/unit/: test_download_youtube.py  test_example_module.py
